[package]
name = "realtime_spectrogram"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16"
crossbeam-channel = "0.5"
rustfft = "6.4"
ratatui = "0.29"
crossterm = "0.29"
anyhow = "1.0"
num-traits = "0.2"
eframe = "0.27"
egui = "0.27"

[[bin]]
name = "list_devices"
path = "src/list_devices.rs"